styling that fixes an issue I introduced where the last infocard at the bottom of the catalog page was cut off

--- a/src/sass/catalog.scss
+++ b/src/sass/catalog.scss
@@ -178,17 +178,15 @@
 	display: inline-block;
 	margin:0 0 10px 0;
 	overflow:visible;
-	position: relative;
-	background: white;
 
 	&:after {
+		position: relative;
 		content: " ";
-		position: absolute;
 		height: 15px;
+		width: 356px;
+		display: block;
+		margin-top: 106px;
 		background: white;
-		bottom: -10px;
-		left: 0;
-		right: 0;
 		box-shadow: 0 -3px 5px white;
 	}
 
@@ -263,6 +261,8 @@
 
 	dl.inline_def {
 		width:235px;
+		max-height: 80px;
+		overflow-y: hidden;
 		margin:0;
 		line-height: 20px;
 	}
@@ -297,6 +297,11 @@
 		animation: animateShow .3s;
 		opacity:1;
 		z-index:20;
+
+		dl
+		{
+			max-height: inherit;
+		}
 	}
 	h1{
 		font-size:18px;
